kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ryha-searxng
  labels:
    name: ryha-searxng
    app: ryha-ultra-searxng
    version: "1.0.0"
